[package]
name = "rocket"
version = "0.1.0"
description = "rocket your coins to raydium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rocket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
num-bigint = "0.4.5"
num-traits = "0.2.19"
solana-program = "1.18.13"
spl-token = "4.0.1"
